log
Wed 23 Aug 2023 07:21:07 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2c8950a
Wed 23 Aug 2023 07:34:49 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b90afea
Wed 23 Aug 2023 07:35:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ac9d332
Wed 23 Aug 2023 07:39:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7a05256
Wed 23 Aug 2023 07:41:04 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
1b6812c
Wed 23 Aug 2023 07:44:21 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b408ca4
Thu 24 Aug 2023 05:31:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:10: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘void *’ was expected
   45 |   return *actual;
      |          ^~~~~~~
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8e3e99d
Thu 24 Aug 2023 05:31:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:10: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   45 |   return *(actual -> head);
      |          ^~~~~~~~~~~~~~~~~
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ee5021b
Thu 24 Aug 2023 05:31:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4d8e048
Thu 24 Aug 2023 05:33:08 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
118e693
Thu 24 Aug 2023 06:02:38 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f581ffb
Thu 24 Aug 2023 06:04:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
56449fc
Thu 24 Aug 2023 06:06:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0e89f8a
Thu 24 Aug 2023 06:07:35 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
56fdaa0
Thu 24 Aug 2023 06:07:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5632dad
Thu 24 Aug 2023 06:11:03 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
419159c
Thu 24 Aug 2023 07:54:56 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
9767ba7
Thu 24 Aug 2023 07:55:46 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
68725fc
Thu 24 Aug 2023 07:58:45 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
5d31e80
Thu 24 Aug 2023 08:04:15 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
12b591d
Thu 24 Aug 2023 08:31:57 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
0ec3de9
Thu 24 Aug 2023 08:33:03 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
35d1822
